-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.7.0
-
None
-
Chakra Linux with KDE 4.10
This might be a very esoterical problem, so a little introduction is needed.
Neo ( http://neo-layout.org/ ) is a (german-optimized) alternative keyboard layout (like dvorak).
Instead of the usual thee keyboard layers (Shift, Alt, Alt Gr) neo has six, to have arrow keys or ESC right under your hands if you touch type.
I just updated to Qt Creator 2.7.0, and when I hit the 4th level modifier key (which actually is the Alt Gr key), it enters 'ÿ'.
Strange enough, the modifier itself still works as it should when I press other keys while holding it down.
So the modifier still works, but somehow fakevim handles it as a plain key instead of a plain / silent modifier.
Everything worked fine with FakeVim and Qt Creator 2.6.
It still works fine in the "normal" Editor without FakeVim activated.
But I can't live without having vim controls and my strange keyboard layout!
Please help me, and let me know what other explanations or debug information might be usefull.
For Gerrit Dashboard: QTCREATORBUG-9010 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
52590,2 | FakeVim: Don't handle key code -1 as ASCII character | 2.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |