FakeVim: Don't handle key code -1 as ASCII character

Task-number: QTCREATORBUG-9010
Change-Id: I690afd4d5ca4ae95ae910eeb8d1c936cef9d70b2
Reviewed-by: hjk <hjk121@nokiamail.com>
Reviewed-by: Eike Ziller <eike.ziller@digia.com>